Added httpstatus enums, and listing controller(not done)
